--- a/nicepage.css
+++ b/nicepage.css
@@ -33238,6 +33238,8 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-header .u-image-1 {
     margin-top: 24px;
     margin-left: -15px;
+    width: auto;
+    height: auto;
   }
 
   .u-header .u-menu-1 {
@@ -33304,6 +33306,14 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 @media (max-width: 575px) {
+  .u-footer .u-sheet-1 {
+    min-height: 132px;
+  }
+
+  .u-footer .u-social-icons-1 {
+    margin-top: 32px;
+  }
+
   .u-footer .u-text-1 {
     width: 340px;
   }
