--- a/nicepage.css
+++ b/nicepage.css
@@ -33226,10 +33226,16 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 @media (max-width: 991px) {
   .u-header .u-image-1 {
+    width: auto;
+    height: auto;
+  }
+}
+@media (max-width: 767px) {
+  .u-header .u-image-1 {
+    width: auto;
     height: 32px;
   }
 }
-
 @media (max-width: 575px) {
   .u-header .u-sheet-1 {
     min-height: 98px;
@@ -33238,8 +33244,6 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-header .u-image-1 {
     margin-top: 24px;
     margin-left: -15px;
-    width: auto;
-    height: auto;
   }
 
   .u-header .u-menu-1 {
