--- a/Home.css
+++ b/Home.css
@@ -12,7 +12,7 @@
 }
 
 .u-section-1 .u-layout-cell-1 {
-  min-height: 581px;
+  min-height: 100px;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -45,6 +45,18 @@
   padding: 10px 52px 10px 51px;
 }
 
+.u-section-1 .u-btn-2 {
+  animation-duration: 1000ms;
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: 3px;
+  background-image: none;
+  margin: 20px auto 0 0;
+  padding: 10px 57px 10px 55px;
+}
+
 .u-section-1 .u-image-1 {
   min-height: 581px;
   background-image: url("images/How_bridge_works.png");
@@ -67,7 +79,7 @@
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 479px;
+    min-height: 82px;
   }
 
   .u-section-1 .u-text-1 {
@@ -78,6 +90,10 @@
 
   .u-section-1 .u-text-2 {
     margin-right: 0;
+  }
+
+  .u-section-1 .u-btn-2 {
+    padding-right: 56px;
   }
 
   .u-section-1 .u-image-1 {
